--- a/SimbirSoft/Properties/launchSettings.json
+++ b/SimbirSoft/Properties/launchSettings.json
@@ -19,11 +19,12 @@
     "SimbirSoft": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": "true",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "http://localhost:5000;https://localhost:5001"
     }
   }
 }
