+ Строка подключения к БД

--- a/SimbirSoft/appsettings.json
+++ b/SimbirSoft/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server = DESKTOP-63SF1SS; Initial Catalog = simbirSoft; Integrated Security = True;"
+  },
   "AllowedHosts": "*"
 }
